fix: featureslist align

--- a/styles/features.module.scss
+++ b/styles/features.module.scss
@@ -13,7 +13,7 @@
 .featuresItem {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   gap: 2.5rem;
   text-align: center;
 
